--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Irina hospedagem</title>
+    <title>Desisto de programar</title>
 </head>
 <body>
     <section class="h-100 gradient-form" style="background-color: #eee;">
@@ -78,7 +78,7 @@
                             </div>
                             <div data-mdb-input-init class="form-outline mb-4">
                               <label class="form-label" for="form2Example11">Municipio</label>
-                              <input type ="number" id="form2Example11" class="form-control"
+                              <input type ="text" id="form2Example11" class="form-control"
                                 placeholder="Municipio residente" />
                             </div>
                             <div data-mdb-input-init class="form-outline mb-4">
